--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "npx": "^10.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "sweetalert2": "^11.22.4"
+    "sweetalert2": "^11.22.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
   },
@@ -35,6 +34,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^7.1.2"
-
   }
 }
