--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,29 +1,20 @@
 {
   "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.5",
     "framer-motion": "^12.23.12",
-<<<<<<< HEAD
-    "lucide-react": "^0.540.0",
-    "npx": "^3.0.0",
-=======
     "lucide-react": "^0.541.0",
     "npx": "^10.2.2",
->>>>>>> 34aac0987b902bd9031e7866604fbe83fc5f5ca0
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.1",
-    "sweetalert2": "^11.22.4"
+    "sweetalert2": "^11.22.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
   },
