--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,10 @@
     "npx": "^10.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sweetalert2": "^11.22.4",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "sweetalert2": "^11.22.4",
+    "sweetalert2-react-content": "^5.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
