--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,9 @@
     "@fortawesome/react-fontawesome": "^0.2.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
-    "npx": "^10.2.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sweetalert2": "^11.22.4",
+    "sweetalert2": "11.22.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
   },
