--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.541.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sweetalert2": "11.22.5",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "sweetalert2": "11.22.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
