--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "chart.js": "^4.5.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.541.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
@@ -23,7 +26,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
-    "sweetalert2": "11.22.5"
+    "sweetalert2": "11.22.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
