--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "styled-jsx": "^5.1.7",
     "sweetalert2": "11.22.5",
     "xlsx": "^0.18.5"
   },
