--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.2.5",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
