--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/react-fontawesome": "^0.2.5",
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "force": "^0.0.3",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
