--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "force": "^0.0.3",
     "framer-motion": "^12.23.12",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.541.0",
