--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "js-cookies": "^1.0.4",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.541.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
